IP2-547: Endpoint returning a list of events
- show list of events for the day
- show list of events for a given period of time
- events are sorted by startDate from earliest to latest
